# ai-newsletter

./: .env.example  .gitignore  pyproject.toml
.github/workflows/: collect.yml  daily.yml  deploy-pages.yml  refresh-cookies.yml  weekly.yml
data/: items.jsonl
output/: index.html
output/daily/: 2026-03-09.html  2026-03-10.html  2026-03-11.html  2026-03-12.html  2026-03-13.html  2026-03-14.html  2026-03-15.html  2026-03-16.html  2026-03-17.html  2026-03-18.html
output/weekly/: 2026-03-13.html
scripts/: refresh_cookies.py
src/: cli.py  config.py
src/collectors/: reddit.py  twitter.py
src/delivery/: html_renderer.py
src/storage/: jsonl.py
src/summarizer/: claude.py  prompts.py
src/templates/: daily.html.j2  index.html.j2  weekly.html.j2
