[project]
name = "ai-newsletter"
version = "0.1.0"
description = "AI newsletter pipeline — collects AI news, generates daily/weekly HTML summaries"
requires-python = ">=3.11"
dependencies = [
    "twikit>=2.3.1",
    "requests>=2.31.0",
    "anthropic>=0.43.0",
    "jinja2>=3.1.4",
    "playwright>=1.40.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
